<resources>
    <string name="app_name">CatchFish</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_catches">Catches</string>
    <string name="label_fish_species">Fish Species</string>
    <string name="label_weight">Weight</string>
    <string name="label_length">Length</string>
    <string name="label_angler">Angler</string>
    <string name="error_generic_refresh_feed">Something went wrong. Please refresh.</string>
</resources>
